hydro_lang/src/live_collections/snapshots/hydro_lang__live_collections__stream__tests__backtrace_chained_ops-2.snap
---
source: hydro_lang/src/live_collections/stream.rs
expression: for_each_meta.backtrace.elements()
---
[
    BacktraceElement {
        fn_name: "hydro_lang::live_collections::stream::tests::backtrace_chained_ops",
        lineno: Some(
            2589,
        ),
        colno: Some(
            37,
        ),
    },
    BacktraceElement {
        fn_name: "hydro_lang::live_collections::stream::tests::backtrace_chained_ops::{{closure}}",
        lineno: Some(
            2583,
        ),
        colno: Some(
            31,
        ),
    },
    BacktraceElement {
        fn_name: "core::ops::function::FnOnce::call_once",
        lineno: Some(
            250,
        ),
        colno: Some(
            5,
        ),
    },
]
